@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.5
+	- Allow mms,mmsh,mmsu,mmst,rstp in Radio Stream URLs
 	- Fixed a problem where after adding a track to a saved playlist
 		there was no UI response upon deleting the track without
 		a page refresh
